After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 683642 - Missing g_content_type_get_symbolic_icon
Missing g_content_type_get_symbolic_icon
Status: RESOLVED FIXED
Product: glib
Classification: Platform
Component: gio
2.33.x
Other Windows
: Normal critical
: ---
Assigned To: gtkdev
gtkdev
Depends on:
Blocks:
 
 
Reported: 2012-09-08 20:47 UTC by LRN
Modified: 2012-10-15 23:23 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Adds g_content_type_get_symbolic_icon() (379 bytes, patch)
2012-09-08 20:48 UTC, LRN
accepted-commit_now Details | Review
Adds g_content_type_get_generic_icon_name() stub as well (367 bytes, patch)
2012-10-04 02:43 UTC, LRN
none Details | Review

Description LRN 2012-09-08 20:47:54 UTC
Someone forgot to add g_content_type_get_symbolic_icon() function for W32.
Comment 1 LRN 2012-09-08 20:48:55 UTC
Created attachment 223824 [details] [review]
Adds g_content_type_get_symbolic_icon()

Patch against 2.33.12
Note that it simply discards the "symbolic" part and calls g_content_type_get_icon(). I have no idea what a "symbolic" icon would be on W32.
Comment 2 LRN 2012-09-08 20:51:35 UTC
OK, after reading [1] i think my patch falls into "fallback" category, and should be acceptable.

[1] http://www.freedesktop.org/wiki/SymbolicIcons
Comment 3 Matthias Clasen 2012-09-09 15:33:19 UTC
Yes, looks like this may be the best we can do.
The documentation of the new symbolic_icon functions should be amended to state that they may return regular icons if symbolic ones are not available.
Comment 4 Matthias Clasen 2012-09-09 15:33:31 UTC
Review of attachment 223824 [details] [review]:

.
Comment 5 LRN 2012-10-04 02:43:45 UTC
Created attachment 225738 [details] [review]
Adds g_content_type_get_generic_icon_name() stub as well

Guys, you're adding new functions faster than i can patch them in _AND_ get my patches accepted! Slow down a bit, maybe? :)